2002-07-24  Werner Koch  <wk@gnupg.org>

	* longlong.h: Replaced all K&R multiline strings by ISO ones for
	the sake of modern compilers.  Suggested by Marco Parrone.

2002-06-24  Werner Koch  <wk@gnupg.org>

	* mpiutil.c (gcry_mpi_swap): New.

	* mpi-div.c (gcry_mpi_div): New.
	(gcry_mpi_mod): New.
	* mpi-inv.c (gcry_mpi_invm): New.

	* mpicoder.c (do_get_buffer): Make sure that we allocate at least
	one byte.

2002-06-12  Werner Koch  <wk@gnupg.org>

	* hppa1.1/udiv-qrnnd.S: Changes for PIC by Randolph Chung.

2002-05-15  Werner Koch  <wk@gnupg.org>

	* config.links: Chnage the way the mpi modules are determined.
	* Makefile.am: Revamped to better handle modules

2002-05-14  Werner Koch  <wk@gnupg.org>

	Changed license of all files to the LGPL.

2002-04-18  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (gcry_mpi_scan): Don't use normalize on a NULL MPI.

2002-03-20  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (mpi_read_from_buffer): Bail out on a zero length
	buffer because we can't eventually do an malloc of this size.
	Reported by Timo.

2002-01-14  Werner Koch  <wk@gnupg.org>

	* mpi-inv.c (_gcry_mpi_invm): Typo fixes, noted by Carlo Perassi.

2001-11-01  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (gcry_mpi_scan): Allow to pass a nbytes as NULL or
	with value 0 for format GCRY_FMT_SSH, so that the length is not
	used for any checks, only the length stored in the bufer is used.
	This is a nice format becuase we can just pass a buffer around and
	don't need to care about its length.

2001-08-03  Werner Koch  <wk@gnupg.org>

	* config.links: Changed the way the list of files to be
	symlinked is returned.

2001-05-31  Werner Koch  <wk@gnupg.org>

	* mpih-cmp.c: Removed and moved mpihelp_cmp to ..
	* mpi-inline.h: .. here.

	Major function renaming. All global functions are now prefixed
	with _gcry_ or gcry_.  Renamed also all mpihelp_ to just mpih_ so
	that functions names are not getting to long an unreadable and for
	better matching with the filenames.
	