@@ -1,3 +1,7 @@
+2002-08-23  Werner Koch  <wk@gnupg.org>
+
+	* Makefile.am (.S.lo): Fixed for libtool build with --disable-shared.
+
 2002-07-24  Werner Koch  <wk@gnupg.org>
 
 	* longlong.h: Replaced all K&R multiline strings by ISO ones for
